Added plugins to swagger
