# public/tools/schema/openapi_rest_demo.json
@@ -243,7 +243,7 @@
         "tags": [
           "articles"
         ],
-        "summary": "Deletes a article",
+        "summary": "Deletes an article",
         "operationId": "deleteArticle",
         "parameters": [
           {
@@ -900,11 +900,219 @@
         "x-codegen-request-body-name": "body"
       }
     },
-    "plugins": {
+    "/plugins": {
       "get": {
         "security": [{
+          "bearerAuth": []
+        }],
+        "tags": [
+          "admin"
+        ],
+        "summary": "Get plugins",
+        "description": "Get list of plugins. Requires Bearer Authentication (also called token authentication). In Swagger UI use padlock on right to configure token.",
+        "operationId": "getPlugins",
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Plugins"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Invalid token",
+            "content": { }
+          }
+        },
+        "x-codegen-request-body-name": "body"
+      },
+      "post": {
+        "security": [{
           "basicAuth": []
-        }]
+        }],
+        "tags": [
+          "admin"
+        ],
+        "summary": "Add new plugin",
+        "description": "Add new plugin. Requires Basic Authentication. In Swagger UI use padlock on right to configure token.",
+        "operationId": "addPlugin",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PluginCreate"
+              }
+            }
+          },
+          "required": false
+        },
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Plugins"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Invalid Basic Authentication",
+            "content": { }
+          },
+          "422": {
+            "description": "Invalid plugin supplied",
+            "content": {}
+          }
+        },
+        "x-codegen-request-body-name": "body"
+      }
+    },
+    "/plugins/{id}": {
+      "get": {
+        "security": [{
+          "bearerAuth": []
+        }],
+        "tags": [
+          "admin"
+        ],
+        "summary": "Find plugin by ID",
+        "description": "Returns single plugin. Requires Bearer Authentication (also called token authentication). In Swagger UI use padlock on right to configure token.",
+        "operationId": "getPluginById",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of plugin to return",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Plugin"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Invalid Basic Authentication",
+            "content": { }
+          },
+          "404": {
+            "description": "Plugin not found",
+            "content": {}
+          }
+        }
+      },
+      "put": {
+        "security": [{
+          "basicAuth": []
+        }],
+        "tags": [
+          "admin"
+        ],
+        "summary": "Updates a plugin",
+        "description": "Updates a plugin. Requires Basic Authentication. In Swagger UI use padlock on right to configure token.",
+        "operationId": "putPlugin",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "id of article that need to be updated",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "Updated plugin object",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PluginCreate"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Plugin updated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Plugin"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request - malformed JSON",
+            "content": {}
+          },
+          "403": {
+            "description": "Invalid Basic Authentication",
+            "content": { }
+          },
+          "404": {
+            "description": "Plugin not found",
+            "content": {}
+          },
+          "422": {
+            "description": "Invalid plugin supplied",
+            "content": {}
+          }
+        }
+      },
+      "delete": {
+        "security": [{
+          "basicAuth": []
+        }],
+        "tags": [
+          "admin"
+        ],
+        "summary": "Deletes a plugin",
+        "operationId": "deletePlugin",
+        "description": "Deletes a plugin. Requires Basic Authentication. In Swagger UI use padlock on right to configure token.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Plugin id to delete",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Plugin deleted",
+            "content": {}
+          },
+          "403": {
+            "description": "Invalid Basic Authentication",
+            "content": { }
+          },
+          "404": {
+            "description": "Plugin not found",
+            "content": {}
+          }
+        }
       }
     }
   },
@@ -1104,6 +1312,55 @@
         },
         "xml": {
           "name": "User"
+        }
+      },
+      "Plugin": {
+        "type": "object",
+        "required":  ["name", "status", "version"],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "name": {
+            "type": "string"
+          },
+          "status": {
+            "type": "string"
+          },
+          "version": {
+            "type": "integer",
+            "format": "int64"
+          }
+        },
+        "xml": {
+          "name": "Plugin"
+        }
+      },
+      "PluginCreate": {
+        "type": "object",
+        "required":  ["name", "status", "version"],
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "status": {
+            "type": "string"
+          },
+          "version": {
+            "type": "integer",
+            "format": "int64"
+          }
+        },
+        "xml": {
+          "name": "Plugin"
+        }
+      },
+      "Plugins": {
+        "type": "array",
+        "items":
+        {
+          "$ref": "#/components/schemas/Plugin"
         }
       }
     }
